--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css0/all.css">
+    <link rel="stylesheet" href="css0/style.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <title>Mohamed Taha</title>
 </head>
 <body>
     <header>
         <img src="pictures/logo.png" alt="logo" class="loge">
         <nav class="navigation">
+            <a href="#main">Home</a>
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
@@ -104,6 +106,18 @@
                     </strong>
                 </div>
             </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="pictures/Project-2.PNG" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">Front End website for a Store.....</p>
+                    <strong class="project-title">
+                        <span>M~Store</span>
+                        <a href="https://mo7amedta7a.github.io/M-Store/" class="more-details">More details></a>
+                    </strong>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -141,5 +155,10 @@
             <a class="f"  href="https://www.facebook.com/profile.php?id=100084051480065&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
+
+
+
+
+<!-- <script src="js/bootstrap.min.js"></script> -->
 </body>
 </html>
