--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="pictures/Project3.PNG" />
+                    <img src="pictures/roject_3.PNG" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Front End website for a person.....</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="pictures/Project-2.PNG" />
+                    <img src="pictures/pro-4.PNG" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Front End website for a Store.....</p>
