--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
                     </strong>
                 </div>
             </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="pictures/Progect(bootstrap).PNG" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">Front End website for a Trips.....</p>
+                    <strong class="project-title">
+                        <span>Safaree</span>
+                        <a href="https://mo7amedta7a.github.io/Safaree/" class="more-details">More details></a>
+                    </strong>
+                </div>
+            </div>
         </div>
     </section>
 
