--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <a id="a-ul-header" class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a id="a-ul-header" class="nav-link" href="#">Services</a>
+                <a id="a-ul-header" class="nav-link" href="#Services">Services</a>
               </li>
               <li class="nav-item">
-                <a id="a-ul-header" class="nav-link" href="#">Projects</a>
+                <a id="a-ul-header" class="nav-link" href="#Projects">Projects</a>
               </li> 
               <li class="nav-item">
-                <a id="a-ul-header" class="nav-link" href="#">Contact</a>
+                <a id="a-ul-header" class="nav-link" href="#Contact">Contact</a>
               </li> 
             </ul>
           </div>
@@ -41,7 +41,7 @@
                     <h5 class="text-white">Hello, I'm Mohamed Taha<br><br><br></h5>
                     <h1 class="h1-main">Web Developer<span class="h1-main-span">(Full Stack)</span></h1>
                     <h4 class="text-white">I build professional websites</h4>
-                    <a href="#projects" class="main-btn">View my work</a>
+                    <a href="#Projects" class="main-btn">View my work</a>
                     <div class="social-icons">
                     <a class="l" href="https://www.linkedin.com/in/engmohamed-taha-5398942a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                     <a class="t" href="https://x.com/Mo7amedTa74?t=WVkznGQnRLXQvLXMl7IrEA&s=08"><i class="fab fa-twitter"></i></a>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </main>
-    <section>
+    <section id="Services">
         <div class="container pt-5">
             <h1 class="text-center h1-services">Services</h1>
             <div class="hr-services mx-auto mb-5 rounded mt-4" style="width: 150px;height: 4px;"></div>
@@ -93,7 +93,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="Projects">
         <div class="container-fluid projects p-5">
             <div class="container">
                 <h1 class="text-center h1-services">Projects</h1>
@@ -148,7 +148,7 @@
             </div>
         </div>
     </section>
-    <section class="p-5">
+    <section id="Contact" class="p-5">
         <div class="container">
             <h1 class="text-center h1-services">Let's work together</h1>
             <div class="hr-services mx-auto mb-5 rounded mt-4" style="width: 150px;height: 4px;"></div>
