--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="card-body">
                       <h4 class="card-title">library</h4>
                       <p class="card-text">Backend and Frontend office management website......</p>
-                      <a href="#" class="btn btn-primary">See Profile</a>
+                      <a href="#" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
 
@@ -113,8 +113,8 @@
                     <img class="card-img-top" src="pictures/Project2.PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h4 class="card-title">Portfolio</h4>
-                      <p class="card-text">Front End Company Portfolio website.....</p>
-                      <a href="https://mo7amedta7a.github.io/Simple-project-html-css-/" class="btn btn-primary">See Profile</a>
+                      <p class="card-text">Front End Company Portfolio website <span class="text-danger">(No Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/Simple-project-html-css-/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
 
@@ -122,8 +122,8 @@
                     <img class="card-img-top" src="pictures/roject_3.PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h4 class="card-title">Portfolio</h4>
-                      <p class="card-text">Front End website for a person.....</p>
-                      <a href="https://mo7amedta7a.github.io/portifolio/" class="btn btn-primary">See Profile</a>
+                      <p class="card-text">Front End website for a person <span class="text-success">(Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/portifolio/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
 
@@ -131,8 +131,8 @@
                     <img class="card-img-top" src="pictures/pro-4.PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h4 class="card-title">M~Store</h4>
-                      <p class="card-text">Front End website for a Store.....</p>
-                      <a href="https://mo7amedta7a.github.io/M-Store/" class="btn btn-primary">See Profile</a>
+                      <p class="card-text">Front End website for a Store <span class="text-danger">(No Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/M-Store/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
 
@@ -140,8 +140,8 @@
                     <img class="card-img-top" src="pictures/Progect(bootstrap).PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h4 class="card-title">Safaree</h4>
-                      <p class="card-text">Front End website for a Trips.....</p>
-                      <a href="https://mo7amedta7a.github.io/Safaree/" class="btn btn-primary">See Profile</a>
+                      <p class="card-text">Front End website for a Trips <span class="text-success">(Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/Safaree/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
                 </div>
