--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                 <h1 class="text-center h1-services">Projects</h1>
                 <div class="hr-services mx-auto mb-5 rounded mt-4" style="width: 150px;height: 4px;"></div>
                 <div class="row justify-content-around">
-                <div class="card mb-5 p-0" style="width:500px">
-                    <img class="card-img-top" src="pictures/project1.PNG" alt="Card image" style="width:100%">
+
+                  <div class="card mb-5 p-0" style="width:500px">
+                    <img class="card-img-top" src="pictures/Progect-6.PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h4 class="card-title">library</h4>
-                      <p class="card-text">Backend and Frontend office management website......</p>
-                      <a href="#" class="btn btn-danger btn-projects">Show</a>
+                      <h4 class="card-title">Simple project</h4>
+                      <p class="card-text">Front End website for a p-simple(HTML-CSS) <span class="text-danger">(No Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/Project-1-simple-HTML-CSS-/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
-
 
                   <div class="card mb-5 p-0" style="width:500px">
                     <img class="card-img-top" src="pictures/Project2.PNG" alt="Card image" style="width:100%">
@@ -115,15 +115,6 @@
                       <h4 class="card-title">Portfolio</h4>
                       <p class="card-text">Front End Company Portfolio website <span class="text-danger">(No Responsive)</span>.....</p>
                       <a href="https://mo7amedta7a.github.io/Simple-project-html-css-/" class="btn btn-danger btn-projects">Show</a>
-                    </div>
-                  </div>
-
-                  <div class="card mb-5 p-0" style="width:500px">
-                    <img class="card-img-top" src="pictures/roject_3.PNG" alt="Card image" style="width:100%">
-                    <div class="card-body">
-                      <h4 class="card-title">Portfolio</h4>
-                      <p class="card-text">Front End website for a person <span class="text-success">(Responsive)</span>.....</p>
-                      <a href="https://mo7amedta7a.github.io/portifolio/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
 
@@ -137,6 +128,24 @@
                   </div>
 
                   <div class="card mb-5 p-0" style="width:500px">
+                    <img class="card-img-top" src="pictures/project1.PNG" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">library</h4>
+                      <p class="card-text">Backend and Frontend office management website......</p>
+                      <a href="#" class="btn btn-danger btn-projects">Show</a>
+                    </div>
+                  </div>
+
+                  <div class="card mb-5 p-0" style="width:500px">
+                    <img class="card-img-top" src="pictures/roject_3.PNG" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">Portfolio</h4>
+                      <p class="card-text">Front End website for a person <span class="text-success">(Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/portifolio/" class="btn btn-danger btn-projects">Show</a>
+                    </div>
+                  </div>
+
+                  <div class="card mb-5 p-0" style="width:500px">
                     <img class="card-img-top" src="pictures/Progect(bootstrap).PNG" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h4 class="card-title">Safaree</h4>
@@ -144,6 +153,16 @@
                       <a href="https://mo7amedta7a.github.io/Safaree/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
+
+                  <div class="card mb-5 p-0" style="width:500px">
+                    <img class="card-img-top" src="pictures/Zero-0.PNG" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">Advanced project</h4>
+                      <p class="card-text">Front End website Advanced <span class="text-success">(Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/the-world/" class="btn btn-danger btn-projects">Show</a>
+                    </div>
+                  </div>
+
                 </div>
             </div>
         </div>
