--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
                       <a href="https://mo7amedta7a.github.io/Sport-Store/" class="btn btn-danger btn-projects">Show</a>
                     </div>
                   </div>
+
+                  <div class="card mb-5 p-0" style="width:500px">
+                    <img class="card-img-top" src="pictures/elec.JPG" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">Electronic devices Store</h4>
+                      <p class="card-text">Front End website Electronic devices Store(JS) <span class="text-success">(Responsive)</span>.....</p>
+                      <a href="https://mo7amedta7a.github.io/Electronic-devices-Store/" class="btn btn-danger btn-projects">Show</a>
+                    </div>
+                  </div>
                   
                 </div>
             </div>
